examples/invalid/program64.c
int main(void) {
    int i;
    for (; i < 10; i = i + 1) {
    }
    return i;
}

